--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -206,6 +206,12 @@
 
 /* layout utility */
 
+.page-wrapper {
+  min-height: 100svh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
 .center {
   margin-inline: auto;
 }
